fixed issue of distortatin.

--- a/public/file.css
+++ b/public/file.css
@@ -19,7 +19,7 @@
   color: #FFFFFF;
   width: 90%;
   max-width: 600px;
-  padding: 10px 30px;
+  /*padding: 10px 30px;*/
   /* border: 10px solid #FFFFFF94; */
   display: none;
   /*border-radius: 15px;*/
@@ -27,8 +27,8 @@
 }
 #popup-close {
   position: absolute;
-  top: 90px;
-  right: 33px;
+  top: 80px;
+  right: 5px;
   cursor: pointer;
   width: 70px;
   z-index: 111;
@@ -82,8 +82,8 @@
 .upper-mg-mob img {
     height: 100px;
     position: absolute;
-    right: 85px;
-    bottom: 47px;
+    right: 115px;
+    bottom: 50px;
     width: 170px;
     height: 55px;
 }
@@ -122,7 +122,7 @@
 
  #popup-close {
     position: absolute;
-    top: 34px;
+    top: 80px;
     right: 5px;
     cursor: pointer;
     width: 70px;
